# linux-notes

./: .gitignore  Cargo.toml  LICENSE  Makefile  PROJECT.md  README.md  com.example.LinuxNotes.yml
data/: com.example.LinuxNotes.desktop  com.example.LinuxNotes.metainfo.xml
scripts/: build-flatpak.sh  build.sh  setup.sh
src/: data.rs  main.rs  ui.rs
